--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ default = true
 [dependency-groups]
 dev = [
     "black>=25.9.0",
+    "matplotlib>=3.10.7",
     "mypy>=1.18.2",
     "ruff>=0.14.1",
 ]
