feat(models): implement core DiT architecture blocks and tests
- Implement Unconditional, DoubleStream, and SingleStream DiT blocks in `src/models/dit_blocks.py`
- Add corresponding unit tests in `src/tests/test_dit_blocks.py`
- Remove obsolete `src/models/rope.py` and `src/utils/logging.py`
- Enable multiprocessing in `PrecomputeEngine`

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,14 @@ test*
 
 # Large files
 checkpoints/
+
+.gemini
+.github
+gha-creds-*.json
+.factory
+
+package-lock.json
+
+# Tests
+!src/tests/
+!src/tests/*.py
