--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "accelerate>=1.10.1",
     "datasets>=4.2.0",
     "diffusers>=0.35.2",
+    "fvcore>=0.1.5.post20221221",
     "gradio>=5.49.1",
     "huggingface-hub>=0.35.3",
     "pandas>=2.3.3",
