--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "pillow>=11.3.0",
     "requests>=2.32.5",
     "torch>=2.9.0",
+    "torch-fidelity>=0.3.0",
+    "torchmetrics>=1.8.2",
     "torchvision>=0.24.0",
     "transformers>=4.57.1",
     "wandb>=0.23.0",
