--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,12 @@ dependencies = [
     "pandas>=2.3.3",
     "pillow>=11.3.0",
     "requests>=2.32.5",
+    "swanlab>=0.7.2",
     "torch>=2.9.0",
     "torch-fidelity>=0.3.0",
     "torchmetrics>=1.8.2",
     "torchvision>=0.24.0",
     "transformers>=4.57.1",
-    "wandb>=0.23.0",
 ]
 
 [[tool.uv.index]]
